Made grid work, added first arrow.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board_Game Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class=wrapper>
-        <div class="central">Centre</div>
+        <div class="centre">Centre
+            <button id="rotate-45">--------></button>
+        </div>
         <div class="box1 boxes">1</div>
         <div class="box2 boxes">2</div>
         <div class="box3 boxes">3</div>
